Prevent horizontal scroll in documentation on mobile

--- a/docs/style/style.scss
+++ b/docs/style/style.scss
@@ -57,6 +57,7 @@ section {
 			border: 2px solid rgba($color-greenDarkest, 0.2);
 			background: linear-gradient(122deg, rgba($color-orangeDark, 0.5), rgba($color-orangeDark, 0.2));
 			padding: 1em;
+			overflow: hidden;
 		}
 	}
 	
